# 140-rule-extraction-trading

./: README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
python/: backtest.py  data_loader.py  example_full_pipeline.py  requirements.txt  rule_extractor.py
rust_examples/: Cargo.toml  README.md
rust_examples/examples/: backtest_rules.rs  extract_rules.rs  fetch_bybit_data.rs  full_pipeline.rs
rust_examples/src/: extraction.rs  lib.rs  main.rs  rules.rs  trading.rs
